remove one step "extract current version" and update step "update dart version number" in generate.yml
Signed-off-by: Daniel Joudat <danieljoudat@gmail.com>

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -120,7 +120,8 @@ jobs:
           seg2=$(echo $oldver | awk -F. '{ print $2}') 
           newver="$seg1.$seg2.$newpatch" 
           sed -i "s/$oldver/$newver/" pubspec.yaml
-          echo "##[set-output name=newver;]$(echo $newver)"
+          upver=$(cat pubspec.yaml | grep version | head -1 | awk -F: '{ print$2}' | sed 's/^ *//g')
+          echo "##[set-output name=upver;]$(echo "v$upver")"
         id: dart_new_version
       
       - name: house cleaning remove unnecessary files/folders
@@ -178,13 +179,6 @@ jobs:
           use_rsync: true
           commit_message: 'Push Dart pubspec and changelog'
 
-      - name: extract current version
-        working-directory: m3o-dart
-        run: |
-          curver=$(cat pubspec.yaml | grep version | head -1 | awk -F: '{ print$2}' | sed 's/^ *//g')
-          echo "##[set-output name=curver;]$(echo "v$curver")"
-        id: dart_cur_version
-
       - name: generate latest release note from micro/services repo
         working-directory: m3o
         run: |
@@ -197,7 +191,7 @@ jobs:
 
       - uses: ncipollo/release-action@v1.9.0
         with:
-          tag: ${{ steps.dart_cur_version.outputs.curver}} 
+          tag: ${{ steps.dart_new_version.outputs.upver}}
           commit: main
           generateReleaseNotes: true
           body: |
