--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,10 @@
 name: m3o
 version: 1.0.87
 homepage: https://github.com/m3o/m3o-dart
-description: |
-  This is the Dart client to access APIs on the M3O Platform.
-  M3O is an attempt to build a new public cloud platform with higher level building blocks for the Next generation of developers.
-  M3O is powered by the open source Micro platform and programmable real world Micro Services.
+description: This is the Dart client to access APIs like DB, Functions, App, Events and more on the M3O Platform
 
 environment:
-  sdk: '>=2.16.0 <3.0.0'
+  sdk: '>=2.15.1 <3.0.0'
 
 dev_dependencies:
   test: ^1.16.0
