--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,45 +13,24 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.release.target_commitish }}
-
-      - name: Set up dart latest
-        uses: dart-lang/setup-dart@v1.3
-        with:
-          sdk:  stable
-        id: dart
+          path: m3o-dart
 
       - name: Update Changelog
         uses: stefanzweifel/changelog-updater-action@v1
         with:
           latest-version: ${{ github.event.release.tag_name }}
           release-notes: ${{ github.event.release.body }}
+          path-to-changelog:  '/github/workspace/m3o-dart/CHANGELOG.md'
 
-      - name: Commit updated CHANGELOG
-        uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Add & Commit
+        uses: EndBug/add-and-commit@v9.0.0
         with:
-          branch: ${{ github.event.release.target_commitish }}
-          commit_message: Update CHANGELOG
-          file_pattern: CHANGELOG.md
-      
-      # TODO(daniel): try to mock server call   
-      # - name: Run the test against helloworld service
-      #   run:  M3O_API_TOKEN=$HW_TOKEN dart test .
-      #   env:
-      #     HW_TOKEN: ${{ secrets.M3O_API_TOKEN }}
-          
-      - name: dry run dart publish
-        run: |
-          dart pub publish --dry-run
+          cwd: m3o-dart
+          message: Update CHANGELOG
+          pathspec_error_handling: exitImmediately
 
       - name: publish m3o-dart package
-        uses: k-paxian/dart-package-publisher@master
+        uses: m3o/m3o-publish-dart-action@main
         with:
-          accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
-          refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
-
-      # - name: publish m3o-dart package
-      #   uses: sakebook/actions-flutter-pub-publisher@v1.3.1
-      #   with:
-      #     credential: ${{ secrets.CREDENTIAL_JSON }}
-      #     skip_test: true
+          pub_credentials: ${{ secrets.CREDENTIAL_JSON }}
     
